--- a/latex_src/index.tex
+++ b/latex_src/index.tex
@@ -636,7 +636,7 @@ v, 181, 184, 186
 \hangindent=3pc \hangafter=1 \verb'error' function (函数 \verb'error')
 118, 149, 178
 
-\hangindent=3pc \hangafter=1 error messages, printing (打印的错误信息) 59
+\hangindent=3pc \hangafter=1 error messages, printing (打印错误信息) 59
 
 \hangindent=3pc \hangafter=1 error, syntax (语法的错误) 4
 
@@ -1004,7 +1004,7 @@ v, 181, 184, 186
 
 \hangindent=3pc \hangafter=1 input line \verb'$0' (输入行的 \verb'$0') 5
 
-\hangindent=3pc \hangafter=1 input pipe, \verb'|' (输入管理) 62, 76
+\hangindent=3pc \hangafter=1 input pipe, \verb'|' (输入管道) 62, 76
 
 \hangindent=3pc \hangafter=1 input pushback (输入撤回) 105, 110
 
@@ -1423,208 +1423,232 @@ v, 181, 184, 186
 
 \hangindent=3pc \hangafter=1 pattern, \verb'END' (模式 \verb'END') 11,23,49
 
-\hangindent=3pc \hangafter=1 pattern, range 32, 85, 187
+\hangindent=3pc \hangafter=1 pattern, range (范围模式) 32, 85, 187
 
-\hangindent=3pc \hangafter=1 pattern, string-matching 26
+\hangindent=3pc \hangafter=1 pattern, string-matching (字符串匹配模式) 26
 
-\hangindent=3pc \hangafter=1 pattern-action cycle 3, 21
+\hangindent=3pc \hangafter=1 pattern-action cycle (\patact 循环) 3, 21
 
-\hangindent=3pc \hangafter=1 pattern-action statement iii, 2, 21, 34, 53, 187
+\hangindent=3pc \hangafter=1 pattern-action statement (\patact 语句)
+iii, 2, 21, 34, 53, 187
 
-\hangindent=3pc \hangafter=1 pattern-directed language 138,  140, 152, 156, 181
+\hangindent=3pc \hangafter=1 pattern-directed language (面向模式的语言)
+138,  140, 152, 156, 181
 
-\hangindent=3pc \hangafter=1 patterns, compound 31
+\hangindent=3pc \hangafter=1 patterns, compound (复合模式) 31
 
-\hangindent=3pc \hangafter=1 patterns, summary of 23, 187
+\hangindent=3pc \hangafter=1 patterns, summary of (模式总结) 23, 187
 
-\hangindent=3pc \hangafter=1 patterns, summary of string-matching 27
+\hangindent=3pc \hangafter=1 patterns, summary of string-matching
+(字符串匹配模式的总结) 27
 
-\hangindent=3pc \hangafter=1 patterns, table of 33
+\hangindent=3pc \hangafter=1 patterns, table of (模式表格) 33
 
-\hangindent=3pc \hangafter=1 \verb'percent' program 70
+\hangindent=3pc \hangafter=1 \verb'percent' program (程序 \verb'percent') 70
 
-\hangindent=3pc \hangafter=1 performance, heapsort 165
+\hangindent=3pc \hangafter=1 performance, heapsort (堆排序的性能) 165
 
-\hangindent=3pc \hangafter=1 performance, insertion sort 158
+\hangindent=3pc \hangafter=1 performance, insertion sort (插入排序的性能) 158
 
-\hangindent=3pc \hangafter=1 performance measurements, table of 183
+\hangindent=3pc \hangafter=1 performance measurements, table of (性能测试,
+表格) 183
 
-\hangindent=3pc \hangafter=1 performance, quicksort 162
+\hangindent=3pc \hangafter=1 performance, quicksort (快速排序的性能) 162
 
-\hangindent=3pc \hangafter=1 \verb'permute' function 199
+\hangindent=3pc \hangafter=1 \verb'permute' function (函数 \verb'permute') 199
 
-\hangindent=3pc \hangafter=1 \verb'pic' language 139
+\hangindent=3pc \hangafter=1 \verb'pic' language (语言 \verb'pic') 139
 
 \hangindent=3pc \hangafter=1 Pike, R. 66
 
-\hangindent=3pc \hangafter=1 pipe, \verb'|' input 62, 76
+\hangindent=3pc \hangafter=1 pipe, \verb'|' input (输入管道) 62, 76
 
-\hangindent=3pc \hangafter=1 pipeline, indexing 129
+\hangindent=3pc \hangafter=1 pipeline, indexing (索引的流水线) 129
 
-\hangindent=3pc \hangafter=1 Pipes, output into 8, 58
+\hangindent=3pc \hangafter=1 Pipes, output into (输出给管道) 8, 58
 
 \hangindent=3pc \hangafter=1 Poage, J. 186
 
-\hangindent=3pc \hangafter=1 Polish notation 142
+\hangindent=3pc \hangafter=1 Polish notation (波兰表示法) 142
 
 \hangindent=3pc \hangafter=1 Polonsky, I. 186
 
-\hangindent=3pc \hangafter=1 Postscript language 142
+\hangindent=3pc \hangafter=1 Postscript language (语言 Postscript) 142
 
-\hangindent=3pc \hangafter=1 \verb'pr' command 175
+\hangindent=3pc \hangafter=1 \verb'pr' command (命令 \verb'pr') 175
 
-\hangindent=3pc \hangafter=1 \verb'prchecks' program 75
+\hangindent=3pc \hangafter=1 \verb'prchecks' program (程序 \verb'prchecks') 75
 
-\hangindent=3pc \hangafter=1 precedence of logical operators 32
+\hangindent=3pc \hangafter=1 precedence of logical operators
+(逻辑运算符的优先级) 32
 
-\hangindent=3pc \hangafter=1 precedence of operators 46
+\hangindent=3pc \hangafter=1 precedence of operators (运算符的优先级) 46
 
-\hangindent=3pc \hangafter=1 precedence of regular expression operators 30
+\hangindent=3pc \hangafter=1 precedence of regular expression operators
+(正则表达式运算符的优先级) 30
 
-\hangindent=3pc \hangafter=1 precision, floating-point 35, 191
+\hangindent=3pc \hangafter=1 precision, floating-point (浮点数精度) 35, 191
 
-\hangindent=3pc \hangafter=1 predecessor node 170
+\hangindent=3pc \hangafter=1 predecessor node (前驱结点) 170
 
-\hangindent=3pc \hangafter=1 \verb'prefix' function 105
+\hangindent=3pc \hangafter=1 \verb'prefix' function (函数 \verb'prefix') 105
 
-\hangindent=3pc \hangafter=1 \verb'prep1' program 90
+\hangindent=3pc \hangafter=1 \verb'prep1' program (程序 \verb'prep1') 90
 
-\hangindent=3pc \hangafter=1 \verb'prep2' program 91
+\hangindent=3pc \hangafter=1 \verb'prep2' program (程序 \verb'prep2') 91
 
-\hangindent=3pc \hangafter=1 \verb'prep3' program 93
+\hangindent=3pc \hangafter=1 \verb'prep3' program (程序 \verb'prep3') 93
 
-\hangindent=3pc \hangafter=1 primary expressions 34
+\hangindent=3pc \hangafter=1 primary expressions (主表达式) 34
 
 \hangindent=3pc \hangafter=1 \verb'print >'\textit{file} 90, 188
 
-\hangindent=3pc \hangafter=1 \verb'print' statement 5, 55
+\hangindent=3pc \hangafter=1 \verb'print' statement (\verb'print' 语句) 5, 55
 
 \hangindent=3pc \hangafter=1 \verb'printf', \verb'%%' in 79
 
-\hangindent=3pc \hangafter=1 \verb'printf' examples, table of 57
+\hangindent=3pc \hangafter=1 \verb'printf' examples, table of
+(\verb'printf' 的例子) 57
 
-\hangindent=3pc \hangafter=1 \verb'printf' specifications, summary of 189
+\hangindent=3pc \hangafter=1 \verb'printf' specifications, summary of
+(\verb'printf' 的规范说明总结) 189
 
 % \hangindent=3pc \hangafter=1 \marginpar{209}
 
-\hangindent=3pc \hangafter=1 \verb'printf' specifications, table of 57
+\hangindent=3pc \hangafter=1 \verb'printf' specifications, table of
+(\verb'printf' 的规范说明总结, 表格) 57
 
 
-\hangindent=3pc \hangafter=1 \verb'printf' statement 7, 24, 56, 98
+\hangindent=3pc \hangafter=1 \verb'printf' statement (\verb'printf' 语句)
+7, 24, 56, 98
 
-\hangindent=3pc \hangafter=1 printing a blank line II, 55
+\hangindent=3pc \hangafter=1 printing a blank line (打印一个空行) II, 55
 
-\hangindent=3pc \hangafter=1 printing checks 74
+\hangindent=3pc \hangafter=1 printing checks (打印支票) 74
 
-\hangindent=3pc \hangafter=1 printing error messages 59
+\hangindent=3pc \hangafter=1 printing error messages (打印错误信息) 59
 
-\hangindent=3pc \hangafter=1 \verb'printprof' program 168
+\hangindent=3pc \hangafter=1 \verb'printprof' program (程序
+\verb'printprof') 168
 
-\hangindent=3pc \hangafter=1 priority queue 162
+\hangindent=3pc \hangafter=1 priority queue (优先级队列) 162
 
-\hangindent=3pc \hangafter=1 processor, \verb'#lnclude' 62, 64
+\hangindent=3pc \hangafter=1 processor, \verb'#lnclude' (\verb'#include'
+的处理器) 62, 64
 
-\hangindent=3pc \hangafter=1 profiling 167
+\hangindent=3pc \hangafter=1 profiling (剖析) 167
 
-\hangindent=3pc \hangafter=1 profiling heapsort 168-169
+\hangindent=3pc \hangafter=1 profiling heapsort (堆排序的剖析) 168-169
 
-\hangindent=3pc \hangafter=1 program, \verb'addcomma' 72, 194
+\hangindent=3pc \hangafter=1 program, \verb'addcomma' (程序 \verb'addcomma')
+72, 194
 
-\hangindent=3pc \hangafter=1 program, \verb'arith' 117
+\hangindent=3pc \hangafter=1 program, \verb'arith' (程序 \verb'arith') 117
 
-\hangindent=3pc \hangafter=1 program, \verb'asm' 134, 203
+\hangindent=3pc \hangafter=1 program, \verb'asm' (程序 \verb'asm') 134, 203
 
-\hangindent=3pc \hangafter=1 program, \verb'awk.parser' 149
+\hangindent=3pc \hangafter=1 program, \verb'awk.parser' 
+(程序 \verb'awk.parser') 149
 
-\hangindent=3pc \hangafter=1 program, batch sort test 155
+\hangindent=3pc \hangafter=1 program, batch sort test
+(批处理的排序测试程序) 155
 
-\hangindent=3pc \hangafter=1 program, \verb'bridge' 199
+\hangindent=3pc \hangafter=1 program, \verb'bridge' (程序 \verb'bridge') 199
 
-\hangindent=3pc \hangafter=1 program, \verb'bundle' 81
+\hangindent=3pc \hangafter=1 program, \verb'bundle'  (程序 \verb'bundle') 81
 
-\hangindent=3pc \hangafter=1 program, \verb'calc1' 143
+\hangindent=3pc \hangafter=1 program, \verb'calc1' (程序 \verb'calc1') 143
 
-\hangindent=3pc \hangafter=1 program, \verb'calc2' 144
+\hangindent=3pc \hangafter=1 program, \verb'calc2' (程序 \verb'calc2') 144
 
-\hangindent=3pc \hangafter=1 program, \verb'calc3' 146
+\hangindent=3pc \hangafter=1 program, \verb'calc3' (程序 \verb'calc3') 146
 
-\hangindent=3pc \hangafter=1 program, \verb'check1' 87
+\hangindent=3pc \hangafter=1 program, \verb'check1' (程序 \verb'check1') 87
 
-\hangindent=3pc \hangafter=1 program, \verb'check2' 87
+\hangindent=3pc \hangafter=1 program, \verb'check2' (程序 \verb'check2') 87
 
-\hangindent=3pc \hangafter=1 program, \verb'check3' 88
+\hangindent=3pc \hangafter=1 program, \verb'check3' (程序 \verb'check3') 88
 
-\hangindent=3pc \hangafter=1 program, \verb'checkgen' 79
+\hangindent=3pc \hangafter=1 program, \verb'checkgen' (程序 \verb'checkgen') 79
 
-\hangindent=3pc \hangafter=1 program, \verb'cliche' 113
+\hangindent=3pc \hangafter=1 program, \verb'cliche' (程序 \verb'cliche') 113
 
-\hangindent=3pc \hangafter=1 program, \verb'colcheck' 77
+\hangindent=3pc \hangafter=1 program, \verb'colcheck' (程序 \verb'colcheck') 77
 
-\hangindent=3pc \hangafter=1 program, \verb'compat' 80
+\hangindent=3pc \hangafter=1 program, \verb'compat' (程序 \verb'compat') 80
 
-\hangindent=3pc \hangafter=1 program, \verb'echo' 63
+\hangindent=3pc \hangafter=1 program, \verb'echo' (程序 \verb'echo') 63
 
-\hangindent=3pc \hangafter=1 program, \verb'field' 66
+\hangindent=3pc \hangafter=1 program, \verb'field' (程序 \verb'field') 66
 
-\hangindent=3pc \hangafter=1 program, \verb'fmt' 120
+\hangindent=3pc \hangafter=1 program, \verb'fmt' (程序 \verb'fmt') 120
 
-\hangindent=3pc \hangafter=1 program, \verb'fmt.just' 202
+\hangindent=3pc \hangafter=1 program, \verb'fmt.just' (程序 \verb'fmt.just')
+202
 
-\hangindent=3pc \hangafter=1 program, \verb'form1' 91
+\hangindent=3pc \hangafter=1 program, \verb'form1' (程序 \verb'form1') 91
 
-\hangindent=3pc \hangafter=1 program, \verb'form2' 92
+\hangindent=3pc \hangafter=1 program, \verb'form2' (程序 \verb'form2') 92
 
-\hangindent=3pc \hangafter=1 program, \verb'form3' 94
+\hangindent=3pc \hangafter=1 program, \verb'form3' (程序 \verb'form3') 94
 
-\hangindent=3pc \hangafter=1 program, \verb'form4' 96
+\hangindent=3pc \hangafter=1 program, \verb'form4' (程序 \verb'form4') 96
 
-\hangindent=3pc \hangafter=1 program \verb'format' 11, 22, 34, 47, 53, 188
+\hangindent=3pc \hangafter=1 program \verb'format' (程序 \verb'format')
+11, 22, 34, 47, 53, 188
 
-\hangindent=3pc \hangafter=1 program, \verb'form.gen' 101
+\hangindent=3pc \hangafter=1 program, \verb'form.gen' (程序 \verb'form.gen') 101
 
-\hangindent=3pc \hangafter=1 program \verb'generation' v, 79, 121, 167
+\hangindent=3pc \hangafter=1 program \verb'generation' (程序 \verb'generation')
+v, 79, 121, 167
 
-\hangindent=3pc \hangafter=1 program, \verb'graph' 137
+\hangindent=3pc \hangafter=1 program, \verb'graph' (程序 \verb'graph') 137
 
-\hangindent=3pc \hangafter=1 program, \verb'histogram' 70, 193
+\hangindent=3pc \hangafter=1 program, \verb'histogram' (程序 \verb'histogram')
+70, 193
 
-\hangindent=3pc \hangafter=1 program, \verb'info' 100
+\hangindent=3pc \hangafter=1 program, \verb'info' (程序 \verb'info') 100
 
-\hangindent=3pc \hangafter=1 program, \verb'interest' 15
+\hangindent=3pc \hangafter=1 program, \verb'interest' (程序 \verb'interest') 15
 
-\hangindent=3pc \hangafter=1 program, \verb'ix.collapse' 126
+\hangindent=3pc \hangafter=1 program, \verb'ix.collapse' (程序
+\verb'ix.collapse') 126
 
-\hangindent=3pc \hangafter=1 program, \verb'ix.format' 129
+\hangindent=3pc \hangafter=1 program, \verb'ix.format' (程序 \verb'ix.format')
+129
 
-\hangindent=3pc \hangafter=1 program, \verb'ix.genkey' 128
+\hangindent=3pc \hangafter=1 program, \verb'ix.genkey' (程序 \verb'ix.genkey')
+128
 
-\hangindent=3pc \hangafter=1 program, \verb'ix.rotate' 127
+\hangindent=3pc \hangafter=1 program, \verb'ix.rotate' (程序 \verb'ix.rotate')
+127
 
-\hangindent=3pc \hangafter=1 program, \verb'ix.sort1' 126
+\hangindent=3pc \hangafter=1 program, \verb'ix.sort1' (程序 \verb'ix.sort1') 126
 
-\hangindent=3pc \hangafter=1 program, \verb'ix.sort2' 128
+\hangindent=3pc \hangafter=1 program, \verb'ix.sort2' (程序 \verb'ix.sort2') 128
 
-\hangindent=3pc \hangafter=1 program, \verb'join' 104
+\hangindent=3pc \hangafter=1 program, \verb'join' (程序 \verb'join') 104
 
-\hangindent=3pc \hangafter=1 program, \verb'kwic' 123. 203
+\hangindent=3pc \hangafter=1 program, \verb'kwic' (程序 \verb'kwic') 123. 203
 
-\hangindent=3pc \hangafter=1 program, \verb'make' 178
+\hangindent=3pc \hangafter=1 program, \verb'make' (程序 \verb'make') 178
 
-\hangindent=3pc \hangafter=1 program, \verb'makeprof' 167
+\hangindent=3pc \hangafter=1 program, \verb'makeprof' (程序 \verb'makeprof') 167
 
-\hangindent=3pc \hangafter=1 program, \verb'nm.format' 74
+\hangindent=3pc \hangafter=1 program, \verb'nm.format' (程序 \verb'nm.format')
+74
 
-\hangindent=3pc \hangafter=1 program, \verb'p12check' 77
+\hangindent=3pc \hangafter=1 program, \verb'p12check' (程序 \verb'p12check') 77
 
-\hangindent=3pc \hangafter=1 program, \verb'passwd' 78
+\hangindent=3pc \hangafter=1 program, \verb'passwd' (程序 \verb'passwd') 78
 
-\hangindent=3pc \hangafter=1 program, \verb'percent' 70
+\hangindent=3pc \hangafter=1 program, \verb'percent' (程序 \verb'percent') 70
 
-\hangindent=3pc \hangafter=1 program, \verb'prchecks' 75
+\hangindent=3pc \hangafter=1 program, \verb'prchecks' (程序 \verb'prchecks') 75
 
-\hangindent=3pc \hangafter=1 program, \verb'prep1' 90
+\hangindent=3pc \hangafter=1 program, \verb'prep1' (程序 \verb'prep1') 90
 
-\hangindent=3pc \hangafter=1 program, \verb'prep2' 91
+\hangindent=3pc \hangafter=1 program, \verb'prep2' (程序 \verb'prep2') 91
 
 \hangindent=3pc \hangafter=1 program, \verb'prep3' 93
 
