--- a/latex_src/index.tex
+++ b/latex_src/index.tex
@@ -1650,103 +1650,113 @@ v, 79, 121, 167
 
 \hangindent=3pc \hangafter=1 program, \verb'prep2' (程序 \verb'prep2') 91
 
-\hangindent=3pc \hangafter=1 program, \verb'prep3' 93
+\hangindent=3pc \hangafter=1 program, \verb'prep3' (程序 \verb'prep3') 93
 
-\hangindent=3pc \hangafter=1 program, \verb'printprof' 168
+\hangindent=3pc \hangafter=1 program, \verb'printprof' (程序
+\verb'printprof') 168
 
-\hangindent=3pc \hangafter=1 program, \verb'qawk' 109
+\hangindent=3pc \hangafter=1 program, \verb'qawk' (程序 \verb'qawk') 109
 
-\hangindent=3pc \hangafter=1 program, \verb'quiz' 118
+\hangindent=3pc \hangafter=1 program, \verb'quiz'  (程序 \verb'quiz') 118
 
-\hangindent=3pc \hangafter=1 program, \verb'rtsort' 174
+\hangindent=3pc \hangafter=1 program, \verb'rtsort'  (程序 \verb'rtsort') 174
 
-\hangindent=3pc \hangafter=1 program, \verb'sentgen' 115,200-201
+\hangindent=3pc \hangafter=1 program, \verb'sentgen'  (程序 \verb'sentgen')
+115,200-201
 
-\hangindent=3pc \hangafter=1 program, \verb'seq' 64
+\hangindent=3pc \hangafter=1 program, \verb'seq'  (程序 \verb'seq') 64
 
-\hangindent=3pc \hangafter=1 program, \verb'sortgen' 141
+\hangindent=3pc \hangafter=1 program, \verb'sortgen'  (程序 \verb'sortgen') 141
 
-\hangindent=3pc \hangafter=1 program, \verb'sum1' 68
+\hangindent=3pc \hangafter=1 program, \verb'sum1'  (程序 \verb'sum1') 68
 
-\hangindent=3pc \hangafter=1 program, \verb'sum2' 68
+\hangindent=3pc \hangafter=1 program, \verb'sum2'  (程序 \verb'sum2') 68
 
-\hangindent=3pc \hangafter=1 program, \verb'sum3' 69
+\hangindent=3pc \hangafter=1 program, \verb'sum3'  (程序 \verb'sum3') 69
 
+\hangindent=3pc \hangafter=1 program, \verb'suncomma' (程序 \verb'suncomma') 71
 
+\hangindent=3pc \hangafter=1 program, \verb'table' (程序 \verb'table') 98
 
-\hangindent=3pc \hangafter=1 program, \verb'suncomma' 71
+\hangindent=3pc \hangafter=1 program, \verb'table1' (程序 \verb'table1') 196
 
-\hangindent=3pc \hangafter=1 program, \verb'table' 98
+\hangindent=3pc \hangafter=1 program, test framework (测试框架) 159
 
-\hangindent=3pc \hangafter=1 program, \verb'table1' 196
+\hangindent=3pc \hangafter=1 program, \verb'transpose' (程序
+\verb'transpose') 204
 
-\hangindent=3pc \hangafter=1 program, test framework 159
+\hangindent=3pc \hangafter=1 program, \verb'tsort' (程序 \verb'tsort') 172
 
-\hangindent=3pc \hangafter=1 program, \verb'transpose' 204
+\hangindent=3pc \hangafter=1 program, \verb'unbundle' (程序
+\verb'unbundle') 82
 
-\hangindent=3pc \hangafter=1 program, \verb'tsort' 172
+\hangindent=3pc \hangafter=1 program, word count (单词计数程序) 14, 119
 
-\hangindent=3pc \hangafter=1 program, \verb'unbundle' 82
+\hangindent=3pc \hangafter=1 program, \verb'wordfreq' (程序
+\verb'wordfreq') 119
 
-\hangindent=3pc \hangafter=1 program, word count 14, 119
+\hangindent=3pc \hangafter=1 program, \verb'xref' (程序 \verb'xref') 122
 
-\hangindent=3pc \hangafter=1 program, \verb'wordfreq' 119
+\hangindent=3pc \hangafter=1 prompt character (提示字符) 2
 
-\hangindent=3pc \hangafter=1 program, \verb'xref' 122
+\hangindent=3pc \hangafter=1 prototyping (原型) iii, v, 78, 152, 185
 
-\hangindent=3pc \hangafter=1 prompt character 2
+\hangindent=3pc \hangafter=1 pseudo-code (伪代码) iv, 153
 
-\hangindent=3pc \hangafter=1 prototyping iii, v, 78, 152, 185
+\hangindent=3pc \hangafter=1 \verb'ptx' command (命令 \verb'ptx') 123
 
-\hangindent=3pc \hangafter=1 pseudo-code iv, 153
+\hangindent=3pc \hangafter=1 pushback, input (输入的撤回) 105, 110
 
-\hangindent=3pc \hangafter=1 \verb'ptx' command 123
+\hangindent=3pc \hangafter=1 \textit{q} query language (\textit{q}
+查询语言) 102, 107
 
-\hangindent=3pc \hangafter=1 pushback, input 105, 110
+\hangindent=3pc \hangafter=1 \verb'qawk' program (程序 \verb'qawk') 109
 
-\hangindent=3pc \hangafter=1 \textit{q} query language 102, 107
+\hangindent=3pc \hangafter=1 \verb'qawk' query processor (\verb'qawk'
+的查询处理程序) 108
 
-\hangindent=3pc \hangafter=1 \verb'qawk' program 109
+\hangindent=3pc \hangafter=1 \verb'qsort' function (函数 \verb'qsort') 161
 
-\hangindent=3pc \hangafter=1 \verb'qawk' query processor 108
+\hangindent=3pc \hangafter=1 quadratic algorithm (二次方程序) 157,162, 183
 
-\hangindent=3pc \hangafter=1 \verb'qsort' function 161
+\hangindent=3pc \hangafter=1 query language (查询语言) 99
 
-\hangindent=3pc \hangafter=1 quadratic algorithm 157,162, 183
+\hangindent=3pc \hangafter=1 queue (队列) 171
 
-\hangindent=3pc \hangafter=1 query language 99
+\hangindent=3pc \hangafter=1 queue, priority (优先级队列) 162
 
-\hangindent=3pc \hangafter=1 queue 171
+\hangindent=3pc \hangafter=1 quicksort algorithm (快速排序算法) 160
 
-\hangindent=3pc \hangafter=1 queue, priority 162
+\hangindent=3pc \hangafter=1 quicksort partitioning step
+(快速排序的划分操作) 160
 
-\hangindent=3pc \hangafter=1 quicksort algorithm 160
+\hangindent=3pc \hangafter=1 quicksort performance (快速排序的性能) 162
 
-\hangindent=3pc \hangafter=1 quicksort partitioning step 160
+\hangindent=3pc \hangafter=1 \verb'quiz' program (程序 \verb'quiz') 118
 
-\hangindent=3pc \hangafter=1 quicksort performance 162
+\hangindent=3pc \hangafter=1 quotes, \verb"' '" (单引号) 2, 4-5, 65, 100
 
-\hangindent=3pc \hangafter=1 \verb'quiz' program 118
+\hangindent=3pc \hangafter=1 quoting in regular expressions
+(正则表达式中的引用) 29-30, 41, 43
 
-\hangindent=3pc \hangafter=1 quotes, \verb"' '" 2, 4-5, 65, 100
+\hangindent=3pc \hangafter=1 \verb'rand' function (函数 \verb'rand') 40, 111
 
-\hangindent=3pc \hangafter=1 quoting in regular expressions 29-30, 41, 43
+\hangindent=3pc \hangafter=1 \verb'rand', initializing (\verb'rand'
+的初始化) 111
 
-\hangindent=3pc \hangafter=1 \verb'rand' function 40, 111
+\hangindent=3pc \hangafter=1 \verb'randint' function (函数 \verb'randint') 111
 
-\hangindent=3pc \hangafter=1 \verb'rand', initializing 111
+\hangindent=3pc \hangafter=1 \verb'randlet' function (函数 \verb'randlet') 112
 
-\hangindent=3pc \hangafter=1 \verb'randint' function 111
+\hangindent=3pc \hangafter=1 random sentences (随机句子) 113
 
-\hangindent=3pc \hangafter=1 \verb'randlet' function 112
+\hangindent=3pc \hangafter=1 range pattern (随机模式) 32, 85, 187
 
-\hangindent=3pc \hangafter=1 random sentences 113
+\hangindent=3pc \hangafter=1 record separator, output (输出的记录分隔符)
+6, 55-56, 83
 
-\hangindent=3pc \hangafter=1 range pattern 32, 85, 187
-
-\hangindent=3pc \hangafter=1 record separator, output 6, 55-56, 83
-
-\hangindent=3pc \hangafter=1 record variable, \verb'$0' 5, 35
+\hangindent=3pc \hangafter=1 record variable, \verb'$0' (记录分隔符,
+\verb'$0') 5, 35
 
 \hangindent=3pc \hangafter=1 records, lines versus 21,60
 
