纠正一处索引错误

--- a/latex_src/index.tex
+++ b/latex_src/index.tex
@@ -1793,7 +1793,7 @@
 
 \hangindent=3pc \hangafter=1 sorting, topological 170
 
-\hangindent=3pc \hangafter=1 \verb'split' function 41,S2-S3, 76, 80, 84, 192
+\hangindent=3pc \hangafter=1 \verb'split' function 41,52-53, 76, 80, 84, 192
 
 \hangindent=3pc \hangafter=1 \verb'sprintf' function 42, 76, 88, 189
 
