纠正一处索引错误.

--- a/latex_src/index.tex
+++ b/latex_src/index.tex
@@ -1805,7 +1805,7 @@
 
 \hangindent=3pc \hangafter=1 standard error file 59
 
-\hangindent=3pc \hangafter=1 standard input file S9, 66
+\hangindent=3pc \hangafter=1 standard input file 59, 66
 
 \hangindent=3pc \hangafter=1 standard input filename, \verb'-' 64, 116
 
