--- a/latex_src/index.tex
+++ b/latex_src/index.tex
@@ -1851,7 +1851,7 @@
 
 \hangindent=3pc \hangafter=1 status return 50, 64
 
-\hangindent=3pc \hangafter=1 string, coercion to 4S
+\hangindent=3pc \hangafter=1 string, coercion to 45
 
 \hangindent=3pc \hangafter=1 string comparison 25-26, 44, 184
 
@@ -1935,9 +1935,7 @@
 
 \hangindent=3pc \hangafter=1 summary of patterns 23,187
 
-\hangindent=3pc \hangafter=1 summary of \verb'printf'
-
-\hangindent=3pc \hangafter=1 speciflcations 189
+\hangindent=3pc \hangafter=1 summary of \verb'printf' speciflcations 189
 
 \hangindent=3pc \hangafter=1 summary of regular expressions 28, 191
 
@@ -1981,9 +1979,7 @@
 
 \hangindent=3pc \hangafter=1 table of patterns 33
 
-\hangindent=3pc \hangafter=1 table of performance
-
-\hangindent=3pc \hangafter=1 measurements 183
+\hangindent=3pc \hangafter=1 table of performance measurements 183
 
 \hangindent=3pc \hangafter=1 table of \verb'printf' examples 57
 
@@ -2031,7 +2027,7 @@
 
 \hangindent=3pc \hangafter=1 translator model 131
 
-\hangindent=3pc \hangafter=1 transpose program 204
+\hangindent=3pc \hangafter=1 \verb'transpose' program 204
 
 \hangindent=3pc \hangafter=1 tree, binary 163
 
@@ -2049,7 +2045,7 @@
 
 \hangindent=3pc \hangafter=1 \verb'unbundle' program 82
 
-\hangindent=3pc \hangafter=1 underscore, 35
+\hangindent=3pc \hangafter=1 underscore, \verb'-' 35
 
 \hangindent=3pc \hangafter=1 \verb'unget' function 105
 
