--- a/latex_src/index.tex
+++ b/latex_src/index.tex
@@ -1851,7 +1851,7 @@
 
 \hangindent=3pc \hangafter=1 status return 50, 64
 
-\hangindent=3pc \hangafter=1 string, coercion to 4S
+\hangindent=3pc \hangafter=1 string, coercion to 45
 
 \hangindent=3pc \hangafter=1 string comparison 25-26, 44, 184
 
